2009-09-30  Boris Kolpackov  <boris@codesynthesis.com>

	* dep.h (dep): Add the DONTCARE bitfield.

	* filedef.h (file):Add the NO_DIAG bitfield.

        * read.c (eval_makefile): Set the DONTCARE flag in struct dep,
	not struct file (a file can be a dependency of many targets,
	some don't care, some do).

	* remake.c (update_goal_chain): Propagate DONTCARE from struct
	dep to struct file before updating the goal and restore it
	afterwards.
	(update_file): Don't prune the dependency graph if this target
	has failed but the diagnostics hasn't been issued.
	(complain): Scan the file's dependency graph to find the file
	that caused the failure.
	(update_file_1): Use NO_DIAG instead of DONTCARE to decide
	whether to print diagnostics.

	Fixes Savannah bugs #15110, #25493, #12686, and #17740.

2009-09-28  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (Pattern Intro): Move the match algorithm
	discussion into the "Pattern Match" node.
	(Pattern Match): Expand on the pattern rule matching algorithm.

2009-09-28  Andreas Buening  <andreas.buening@nexgo.de>

	* job.c (construct_command_argv_internal) [OS2]: Don't eat too
	much of the command line on a single pass.

2009-09-28  Boris Kolpackov  <boris@codesynthesis.com>

	* varible.c (create_pattern_var): Insert variables into the
	PATTERN_VARS list in the shortest patterns first order.

	* implicit.c (tryrule): Add STEMLEN and ORDER members. These are
	used to sort the rules.
	(stemlen_compare): Compare two tryrule elements.
	(pattern_search): Sort the rules so that they are in the shortest
	stem first order.

	* main.c (.FEATURES): Add a keyword to indicate the new behavior.

	* doc/make.texi (Pattern-specific Variable Values): Describe the
	new pattern-specific variables application order.
	(Introduction to Pattern Rules): Describe the new pattern rules
	search order.

	* NEWS: Add a note about the new behavior.

2009-09-27  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (Double-Colon): Mention that pattern rules with